<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application -->
    <string name="app_name">快.相亲</string>
    <string name="app_slogan">快速见到TA，才能快速遇见TA！</string>
    <string name="action_settings">Settings</string>
    <string name="enter_map">进入地图</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_account_hint">请使用如下账号登录：</string>
    <string name="register_account_hint">请使用如下账号注册：</string>
    <string name="login_tel_hint">或者，\n输入手机号码登录：</string>
    <string name="register_tel_hint">或者，\n输入手机号码注册：</string>
    <string name="login_code">验证码</string>
    <string name="login_finish">开始</string>
    <string name="fill_info_title">立即开始相亲</string>
    <string name="fill_info_next">下一步</string>
    <string name="fill_info_name">实名</string>
    <string name="fill_info_name_hint">平时显示姓**,\n约会后可见全名</string>
    <string name="fill_info_sex">性别</string>
    <string name="fill_info_age">年龄</string>
    <string name="fill_info_income">您的收入</string>
    <string name="fill_info_car">车</string>
    <string name="fill_info_house">房</string>
    <string name="fill_info_education">学历</string>
    <string name="fill_info_marriage">婚姻经历</string>
    <string name="fill_info_photo_title">增加一张以上的本人照片</string>
    <string name="fill_info_photo">照片</string>
    <string name="fill_info_video">视频</string>
    <string name="fill_info_desire_title">请选择你对婚姻的渴望程度</string>
    <string name="fill_info_finish">完成</string>
    <string name="fill_info_declaration">个人宣言</string>
    <string name="homepage_title">我</string>
    <string name="homepage_dating_count">已经进行过%1$d次快相亲</string>
    <string name="homepage_opportunity">机会</string>
    <string name="homepage_reputation">信誉</string>
    <string name="homepage_fate">缘分</string>
    <string name="homepage_photo">相册</string>
    <string name="homepage_photo_hint">章泽天想看你的家庭视频!</string>
    <string name="homepage_notification">通知</string>
    <string name="homepage_message">私信</string>
    <string name="homepage_data">资料</string>
    <string name="homepage_authentication">已认证</string>
    <string name="homepage_strategy">攻略</string>
    <string name="homepage_help">帮助</string>
    <string name="homepage_coupon">使用券</string>
    <string name="homepage_meeting">见面</string>
    <string name="homepage_wait_meeting">等待见面</string>
    <string name="browse_title">发现</string>
    <string name="browse_distance">10公里</string>
    <string name="browse_filter">筛选</string>
    <string name="browse_no_love">无爱</string>
    <string name="browse_date">约TA</string>
    <string name="choose_place_title">约定地点</string>
    <string name="choose_place_hint">选择3个约会地点，\n以供对方选择</string>
    <string name="choose_ok">约起</string>
    <string name="choose_place1">COSTA</string>
    <string name="choose_place2">麻辣诱惑</string>
    <string name="choose_place3">星巴克</string>
    <string name="choose_place4">必胜客</string>
    <string name="choose_place5">咖啡厅</string>
    <string name="choose_none_hint">您必须选择3个地点</string>
    <string name="choose_over_hint">您最多只能选择3个地点</string>
    <string name="confirm_hint">若对方在规定时间内不回复将会扣除其信誉值</string>
    <string name="confirm_wait">等待对方回复</string>
    <string name="confirm_place_title">确定地点</string>
    <string name="confirm_place_hint">在3个地点中选择\n心仪的一个？</string>
    <string name="confirm_place_partner">携带闺蜜</string>
    <string name="confirm_place_ok">接受！</string>
    <string name="confirm_none_hint">您至少要选择1个地点</string>
    <string name="notification_list_title">通知</string>
    <string name="notification_item_tip">林志玲的见面邀请</string>
    <string name="notification_item_arrow">＞</string>
    <string name="chat_list_title">私信</string>
	<string name="chat_item_tip">来自林志玲的私信</string>
	<string name="notification_title">通知</string>
	<string name="notification_regret">礼貌拒绝</string>
	<string name="notification_agree">同意见面</string>
	<string name="notification_hint">若你在规定时间内不回复将会扣除\n你的信誉值，拒绝不扣任何信誉值</string>
	<string name="deposit_title">支付保证金</string>
	<string name="deposit_sponsor">为了保证你们能够真实见面，我们将收取见面的保证金。\n\n我们承诺：\n见面后立即退还到您的现金账号。\n\n因为任何原因见面失败，将会在7天内退还保证金。</string>
	<string name="deposit_cancel">取消见面</string>
	<string name="deposit_agree">保存50元</string>
	<string name="deposit_invite">已经支付了保证金50元，诚心邀请您见面。</string>
	<string name="deposit_agree_and_chat">保存50元，并开始聊天</string>
	<string name="chat_title">和王小川的对话</string>
	<string name="chat_content1">管理员温馨建议：约到中午的时间，尽量不约到晚上。5月30日前约会有Uber打折码赠送。</string>
	<string name="chat_content2">你手机号多少？</string>
	<string name="chat_content3">2的13次方，减去1504</string>
	<string name="chat_content4">哇，直接说吧，我数学不好</string>
	<string name="meeting_title">见面中</string>
	<string name="meeting_tip">请将两个手机碰在一起，并关闭静音以确定见面！</string>
	<string name="meeting_tip_success">系统已经成功退回50元，祝你们聊得愉快！</string>
	<string name="meeting_gift">这是系统赠送的美团打折券，感谢使用我们的服务！</string>
	<string name="target_title">王**的个人主页</string>
	<string name="target_title_format">%1$s 的个人主页</string>
	<string name="target_name">王** 见面后可见全名</string>
	<string name="target_name_format">%1$s 见面后可见全名</string>
	<string name="target_verify">车：已验证    房：已验证    银行流水：无</string>
	<string name="target_stars">4.3星</string>
	<string name="wait_meeting_title">等待见面</string>
	<string name="wait_meeting_uber">uber码</string>
	<string name="wait_meeting_flower">鲜花送</string>
	<string name="wait_meeting_coupon">审美券</string>
	<string name="wait_meeting_more">更多>></string>
	<string name="wait_meeting_chat_list">私信</string>
	<string name="wait_meeting_navigation">地点导航</string>
	<string name="wait_meeting_ing">正在见面</string>
</resources>
