<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >
    
    <RelativeLayout
        android:id="@+id/layout_wait_title"
        android:layout_width="match_parent"
    	android:layout_height="@dimen/title_height"
    	android:orientation="horizontal" >
        
        <Button
	        android:id="@+id/btn_homepage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/homepage_notification_shape"
	        android:layout_centerVertical="true"
	        android:text="@string/homepage_title"
	        android:paddingLeft="@dimen/button_text_horizontal_padding"
    		android:paddingRight="@dimen/button_text_horizontal_padding"
    		android:paddingTop="@dimen/button_text_vertical_padding"
    		android:paddingBottom="@dimen/button_text_vertical_padding"
	        android:textSize="@dimen/title_text_size"/>
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/wait_meeting_title"
	        android:textSize="@dimen/title_text_size"/>
        
    </RelativeLayout>
    
    <ImageView 
        android:layout_width="match_parent"
	    android:layout_height="@dimen/sepline_height"
	    android:background="@android:color/holo_blue_dark" />
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="5dp">
        
        <LinearLayout
            android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" 
	    	android:gravity="center_horizontal">
            
            <Button
		        android:id="@+id/btn_uber_code"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/homepage_baseinfo_item_shape"
		        android:text="@string/wait_meeting_uber"
		        android:textSize="@dimen/button_text_size"
		        android:padding="@dimen/button_text_padding"  />
		    
		    <Button
		        android:id="@+id/btn_flower"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/homepage_baseinfo_item_shape"
		        android:text="@string/wait_meeting_flower"
		        android:textSize="@dimen/button_text_size"
		        android:padding="@dimen/button_text_padding" />
		    
		    <Button
		        android:id="@+id/btn_coupon"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/homepage_baseinfo_item_shape"
		        android:text="@string/wait_meeting_coupon"
		        android:textSize="@dimen/button_text_size"
		        android:padding="@dimen/button_text_padding" />
		    
		    <Button
		        android:id="@+id/btn_more"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/homepage_baseinfo_item_shape"
		        android:text="@string/wait_meeting_more"
		        android:textSize="@dimen/button_text_size"
		        android:padding="@dimen/button_text_padding" />
	    
        </LinearLayout>
        
	    <com.android.volley.toolbox.NetworkImageView 
	        android:id="@+id/image_user_photo"
	        android:layout_width="@dimen/browse_photo_size"
	        android:layout_height="@dimen/browse_photo_size"
	        android:layout_centerInParent="true"
	        android:scaleType="centerCrop"
	        android:background="@drawable/a" />
	
	    <LinearLayout
            android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="380dp"
	    	android:orientation="horizontal"
	    	android:gravity="center_horizontal" >
            
            <Button
		        android:id="@+id/btn_chat_list"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/homepage_baseinfo_item_shape"
		        android:text="@string/wait_meeting_chat_list"
		        android:textSize="@dimen/button_text_size"
		        android:padding="@dimen/button_text_padding" />
		    
		    <Button
		        android:id="@+id/btn_navigation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/homepage_baseinfo_item_shape"
		        android:text="@string/wait_meeting_navigation"
		        android:textSize="@dimen/button_text_size"
		        android:padding="@dimen/button_text_padding" />
		    
		    <Button
		        android:id="@+id/btn_meeting"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/homepage_baseinfo_item_shape"
		        android:text="@string/wait_meeting_ing"
		        android:textSize="@dimen/button_text_size"
		        android:padding="@dimen/button_text_padding" />
		    	    
        </LinearLayout>  
        
	</RelativeLayout>

</LinearLayout>