<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.sogou.fastomiai.SplashActivity" >
    
    <RelativeLayout
        android:id="@+id/layout_chat_title"
        android:layout_width="match_parent"
    	android:layout_height="@dimen/title_height"
    	android:orientation="horizontal" >
        
        <ImageButton
	        android:id="@+id/btn_chat_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_back"
	        android:background="@android:color/transparent"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true" />
        
        <TextView
	        android:id="@+id/text_chat_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/chat_title"
	        android:textSize="@dimen/title_text_size" />
        
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/sep_line" 
        android:layout_width="match_parent"
	    android:layout_height="@dimen/sepline_height"
	    android:background="@android:color/holo_blue_dark" />
    
    <LinearLayout
        android:id="@+id/layout_deposit_sponsor"
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="vertical" >
        
        <TextView
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/activity_horizontal_margin"
	    	android:background="@drawable/blue_button_shape"
	    	android:text="@string/chat_content1"
	    	android:textSize="@dimen/title_text_size"
	    	android:padding="@dimen/activity_horizontal_margin" />
        
        <TextView
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/activity_horizontal_margin"
	    	android:layout_gravity="right"
	    	android:background="@drawable/pink_button_shape"
	    	android:text="@string/chat_content2"
	    	android:textSize="@dimen/title_text_size"
	    	android:padding="@dimen/activity_horizontal_margin" />
        
        <TextView
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/activity_horizontal_margin"
	    	android:background="@drawable/blue_button_shape"
	    	android:text="@string/chat_content3"
	    	android:textSize="@dimen/title_text_size"
	    	android:padding="@dimen/activity_horizontal_margin" />
        
        <TextView
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/activity_horizontal_margin"
	    	android:layout_gravity="right"
	    	android:background="@drawable/pink_button_shape"
	    	android:text="@string/chat_content4"
	    	android:textSize="@dimen/title_text_size"
	    	android:padding="@dimen/activity_horizontal_margin" />
        
    </LinearLayout>

</LinearLayout>
