<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical" >
	
    <RelativeLayout
        android:id="@+id/layout_deposit_title"
        android:layout_width="match_parent"
    	android:layout_height="@dimen/title_height"
    	android:orientation="horizontal" >
        
        <ImageButton
	        android:id="@+id/btn_deposit_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_back"
	        android:background="@android:color/transparent"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/deposit_title"
	        android:textSize="28sp"/>
        
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/sep_line" 
        android:layout_width="match_parent"
	    android:layout_height="@dimen/sepline_height"
	    android:background="@android:color/holo_blue_dark" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <TextView
	        android:id="@+id/text_invite"
	        android:layout_width="wrap_content"
		 	android:layout_height="wrap_content"
		 	android:layout_gravity="center_horizontal"
		 	android:layout_margin="@dimen/activity_horizontal_margin"
		 	android:text="@string/deposit_invite"
		 	android:padding="@dimen/activity_horizontal_margin"
		 	android:background="@drawable/blue_button_shape"
		 	android:textSize="22sp" />
    
	    <TextView
	        android:layout_width="wrap_content"
		 	android:layout_height="wrap_content"
		 	android:layout_gravity="center_horizontal"
		 	android:layout_margin="@dimen/activity_horizontal_margin"
		 	android:text="@string/deposit_sponsor"
		 	android:textSize="20sp" />
    
	    <Button
		    android:id="@+id/btn_begin_chat"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/pink_button_shape"
		    android:layout_marginBottom="@dimen/browse_button_bottom_margin"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/deposit_agree_and_chat"
		    android:textSize="22sp"
		    android:textColor="@android:color/white"
		    android:padding="@dimen/deposit_button_padding" />
	    
	    <Button
		    android:id="@+id/btn_receiver_cancel_date"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/blue_button_shape"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginBottom="@dimen/browse_button_bottom_margin"
		    android:text="@string/deposit_cancel"
		    android:textSize="22sp"
		    android:textColor="@android:color/white"
		    android:padding="@dimen/deposit_button_padding" />
        
    </LinearLayout>
   
</LinearLayout>
