<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sogou.fastomiai.SplashActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_row_height"
        android:layout_marginTop="@dimen/fill_child_margin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_name"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_name"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="text" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_name_hint"
	        android:layout_gravity="center_vertical"
	        android:textSize="12sp"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_row_height"
        android:layout_marginTop="@dimen/fill_child_margin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_sex"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_sex"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="text" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_age"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_age"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="number" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_row_height"
        android:layout_marginTop="@dimen/fill_child_margin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_sex"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_income"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="number" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_row_height"
        android:layout_marginTop="@dimen/fill_child_margin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_car"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_car"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="text" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_house"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_house"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="text" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_row_height"
        android:layout_marginTop="@dimen/fill_child_margin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_education"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_education"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="number" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fill_row_height"
        android:layout_marginTop="@dimen/fill_child_margin" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fill_info_marriage"
	        android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/edit_marriage"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="@dimen/fill_child_margin"
	        android:layout_marginRight="@dimen/fill_child_margin"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:inputType="number" />

    </LinearLayout>

</LinearLayout>
