<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.sogou.fastomiai.SplashActivity" >
    
    <RelativeLayout
        android:id="@+id/layout_deposit_title"
        android:layout_width="match_parent"
    	android:layout_height="@dimen/title_height"
    	android:orientation="horizontal" >
        
        <ImageButton
	        android:id="@+id/btn_deposit_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_back"
	        android:background="@android:color/transparent"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true" />
        
        <TextView
	        android:id="@+id/text_fill_info_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/deposit_title"
	        android:textSize="@dimen/title_text_size" />
        
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/sep_line" 
        android:layout_width="match_parent"
	    android:layout_height="@dimen/sepline_height"
	    android:background="@android:color/holo_blue_dark" />
    
    <RelativeLayout
        android:id="@+id/layout_deposit_sponsor"
        android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
        
        <TextView
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="@dimen/activity_horizontal_margin"
	    	android:text="@string/deposit_sponsor"
	    	android:textSize="@dimen/body_text_size" />
        
        <Button
	        android:id="@+id/btn_sponsor_cancel_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@android:color/transparent"
	        android:layout_alignParentBottom="true"
	        android:layout_marginBottom="@dimen/browse_button_bottom_margin"
	        android:text="@string/deposit_cancel"
	        android:textSize="@dimen/body_text_size"
	        android:padding="@dimen/button_text_padding" />
	    
	    <Button
	        android:id="@+id/btn_deposit_agree"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/blue_button_shape"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginBottom="@dimen/browse_button_bottom_margin"
	        android:text="@string/deposit_agree"
	        android:textSize="@dimen/button_text_size"
	        android:padding="@dimen/big_button_text_padding" />
        
    </RelativeLayout>

</LinearLayout>
