<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sogou.fastomiai.SplashActivity" >
    
    <RelativeLayout
        android:id="@+id/layout_login_title"
        android:layout_width="match_parent"
    	android:layout_height="@dimen/login_title_height"
    	android:orientation="horizontal" >
        
        <ImageButton
	        android:id="@+id/btn_login_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_back"
	        android:background="@android:color/transparent"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true" />
        
        <TextView
	        android:id="@+id/text_login_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/register"
	        android:textSize="28sp"/>
        
    </RelativeLayout>
    
    <ImageView 
        android:layout_width="match_parent"
	    android:layout_height="@dimen/login_title_sep_height"
	    android:layout_below="@id/layout_login_title"
	    android:background="@android:color/holo_blue_dark" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_left_right_margin"
        android:layout_marginRight="@dimen/login_left_right_margin"
    	android:orientation="vertical" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/login_account_hint_top_margin"
	        android:text="@string/login_account_hint"
	        android:textSize="22sp"/>
        
        <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/login_icon_top_margin"
	    	android:orientation="horizontal">
	        
	        <ImageButton
		        android:id="@+id/btn_login_wechat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/wechat_icon"
		        android:background="@android:color/transparent"
		        android:layout_alignParentLeft="true" />
	        
	        <ImageButton
		        android:id="@+id/btn_login_qq"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/qq_icon"
		        android:background="@android:color/transparent"
		        android:layout_alignParentRight="true" />
	        
	    </RelativeLayout>
	    
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/login_tel_hint_top_margin"
	        android:text="@string/login_tel_hint"
	        android:textSize="22sp"/>
        
        <EditText
            android:id="@+id/edit_tel"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/login_edit_height"
	        android:singleLine="true"
	        android:inputType="phone" />
        
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	        
            <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/login_code"
		        android:textSize="22sp"/>
	        
	        <EditText
	            android:id="@+id/edit_code"
		        android:layout_width="0dp"
		        android:layout_height="@dimen/login_edit_height"
		        android:layout_weight="1"
		        android:singleLine="true"
		        android:inputType="number" />
	        
        </LinearLayout>
        
        <Button
	        android:id="@+id/btn_show_map"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:text="@string/login_finish" />
        
    </LinearLayout>

</RelativeLayout>
